--- a/tests.html
+++ b/tests.html
@@ -11,7 +11,7 @@
   <div id="qunit-fixture"></div>
   <script src="https://code.jquery.com/qunit/qunit-2.1.1.js"></script>
   <script src="scripts/truck.js"></script>
-  <script src="scripts/main.js"></script>
+  <script src="scripts/datastore.js"></script>
   <script src="scripts/tests.js"></script>
 </body>
 </html>
